--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <button class="generate">Generate</button>
             <button class="solve">Solve</button>
             <div class="resize-container">
-                <input type="range" min = 5 max=100 id="size-slider" value=10 step=2>
+                <h3 class="size-n"></h3>
+                <input type="range" min = 5 max=100 id="size-slider" value=10 step=5>
                 <button class="resize">Resize</button>
             </div>
         </div>
