Add footer, change style

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
     <title>Mazey</title>
 </head>
 <body>
-    <div class="header">
-        <h1 class="title">Welcome to Mazey , Adventurers!</h1>
-    </div>
     <div class="container">
         <div class="side-bar">
+            <h1 class="title">Welcome to Mazey , Adventurers!</h1>
             <button class="generate">Generate</button>
             <button class="solve">Solve</button>
             <div class="resize-container">
@@ -26,6 +24,9 @@
             </div>
         </div>
         <div class="maze"></div>
+    </div>
+    <div class="footer">
+    <a href="https://github.com/wyhong3103" target="_blank">Wong Yen Hong <img class="github-img" src="img/github.png"></a><span> © 2022</span>
     </div>
 </body>
 </html>
