--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="side-bar">
-            <h1 class="title">Welcome to Mazey , Adventurers!</h1>
+            <h1 class="title">Welcome to Mazey !</h1>
             <button class="generate">Generate</button>
             <button class="solve">Solve</button>
             <div class="resize-container">
